generate_API_yaml/20241204152244/AWSYellow/ContainerAPI/ifcad-atl19-vmc-step2-cad-rewrite-path-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ifcad-atl19-vmc-step2-cad-rewrite-path-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: apikey, vmc-step2-cad-acl , rewrite-path
spec:
  rules:
  - host: vpr-sv-aws101.aws.t.rd.honda.com
    http:
      paths:
      - backend:
          serviceName: vmccad-services-public-designcmf-apiv1
          servicePort: 80
        path: /vmccad/v1/(CMFInformation/get)
        pathType: ImplementationSpecific
